v21.07/de/_sources/camera_modules.rst.txt
3D-Kamera-Module

Die 3D-Kamera-Software des

rc_cube

 enthält die folgenden Module:

Stereokamera (rc_stereocamera, Abschnitt \ref{stereo_camera:sect-
stereo-camera})  erfasst Stereo-Bildpaare und führt die planare
Rektifizierung durch, wodurch die Stereokamera als Messinstrument
verwendet werden kann. Bilder werden sowohl für die weitere interne
Verarbeitung durch andere Module als auch als GenICam-Bild-Streams für
die externe Verwendung bereitgestellt.

Stereo-Matching (rc_stereomatching, Abschnitt \ref{stereo_matching
:sect-stereo-matching})  nutzt die rektifizierten Stereo-Bildpaare, um
3D-Tiefeninformationen, z.B. für Disparitäts-, Fehler- und
Konfidenzbilder, zu berechnen. Diese werden auch als GenICam-Bild-
Streams bereitgestellt.

Die Module für die

Stereokamera

 und das

Stereo-Matching

, welche die Stereo-Bildpaare und die 3D-Tiefeninformationen
bereitstellen, sind auch über die

GigE Vision/GenICam-Schnittstelle

 des

rc_cube

 konfigurierbar.

