v23.04/de/_sources/camera_modules.rst.txt
3D-Kamera-Module

Die 3D-Kamera-Software des

rc_cube

 enthält die folgenden Module:

Kamera (rc_camera, Abschnitt \ref{stereo_camera:sect-stereo-camera})
erfasst Bildpaare und führt die planare Rektifizierung durch, wodurch
die Kamera als Messinstrument verwendet werden kann. Bilder werden
sowohl für die weitere interne Verarbeitung durch andere Module als
auch als GenICam-Bild-Streams für die externe Verwendung
bereitgestellt.

Stereo-Matching (rc_stereomatching, Abschnitt \ref{stereo_matching
:sect-stereo-matching})  nutzt die rektifizierten Bildpaare der
verbundenen Stereokamera, z.B. des rc_visard, um 3D-
Tiefeninformationen, z.B. für Disparitäts-, Fehler- und
Konfidenzbilder, zu berechnen. Diese werden auch als GenICam-Bild-
Streams bereitgestellt.

Blaze (rc_blaze, Abschnitt \ref{blaze:sect-blaze})  stellt 3D-
Tiefeninformationen, z.B. Disparitäts-, Fehler- und Konfidenzbilder,
der angeschlossenen Basler blaze RGB-D Kamera zur Verfügung. Diese
werden auch als GenICam-Bild-Streams bereitgestellt.

Diese Softwaremodule sind pipelinespezifisch, was heißt, dass sie
innerhalb jeder Kamerapipeline laufen. Änderungen ihrer Einstellungen
oder Parameter gelten nur für die zugehörige Pipeline und haben keinen
Einfluss auf andere Kamerapipelines auf dem

rc_cube

.

Bemerkung: Das Stereo-Matching Modul ist nur in Kamerapipelines vom
  Typ "rc_visard" oder "rc_viscore" verfügbar. Das Blaze Modul ist nur
  in Kamerapipelines vom Typ "blaze" verfügbar.

Die Module für die

Kamera

 und das

Stereo-Matching

, welche die Bildpaare und die 3D-Tiefeninformationen bereitstellen,
sind auch über die

GigE Vision/GenICam-Schnittstelle

 des

rc_cube

 konfigurierbar.

